--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,10 @@
 <build>
 	<finalName>docker-jenkins-integration-sample</finalName>
 </build>
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+</properties>
 </project>
